// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / FlexTable / Default FlexTable Default Table 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c3 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c21 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c23 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c24 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c20 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c18 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c18,
.c18[type='button'],
.c18[type='reset'],
.c18[type='submit'] {
  -webkit-appearance: button;
}

.c18::-moz-focus-inner,
.c18[type='button']::-moz-focus-inner,
.c18[type='reset']::-moz-focus-inner,
.c18[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c18:-moz-focusring,
.c18[type='button']:-moz-focusring,
.c18[type='reset']:-moz-focusring,
.c18[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c9 {
  width: inherit;
}

.c11 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
}

.c15 {
  overflow: hidden;
}

.c19:focus {
  outline: none;
}

.c13 {
  display: none;
}

.c4 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c4 > *:first-child {
  padding-left: 0;
}

.c4 > *:nth-last-child(2) {
  padding-right: 0;
}

.c14 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c14:hover {
  background: #F5F5F5;
}

.c14 > *:first-child {
  padding-left: 0;
}

.c14 > *:nth-last-child(2) {
  padding-right: 0;
}

.c5 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c7 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media not all and (max-width:975px) {
  .c17 {
    display: none;
  }
}

@media not all and (min-width:976px) {
  .c22 {
    display: none;
  }
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Default Table
  </span>
  <div
    className="c2"
    role="table"
  >
    <div
      className="c3 c4 c5"
      role="row"
    >
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c12 c7 c13"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          />
        </div>
      </div>
    </div>
    <div
      className="c3 c14"
      role="row"
    >
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 1-3
          </span>
        </div>
      </div>
      <div
        className="c12 c15 c13"
        role="cell"
      >
        <div
          className="c17"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c18 c19"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c20"
            >
              <svg
                aria-hidden="true"
                className="c21"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c22"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c18 c19"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c20"
            >
              <svg
                aria-hidden="true"
                className="c23 c24"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c3 c14"
      role="row"
    >
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 2-3
          </span>
        </div>
      </div>
      <div
        className="c12 c15 c13"
        role="cell"
      >
        <div
          className="c17"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c18 c19"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c20"
            >
              <svg
                aria-hidden="true"
                className="c21"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c22"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c18 c19"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c20"
            >
              <svg
                aria-hidden="true"
                className="c23 c24"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c3 c14"
      role="row"
    >
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 3-3
          </span>
        </div>
      </div>
      <div
        className="c12 c15 c13"
        role="cell"
      >
        <div
          className="c17"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c18 c19"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c20"
            >
              <svg
                aria-hidden="true"
                className="c21"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c22"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c18 c19"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c20"
            >
              <svg
                aria-hidden="true"
                className="c23 c24"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / Default FlexTable Default Table With Actions Column 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c3 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c19 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c23 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c25 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c26 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c18 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c17 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c17,
.c17[type='button'],
.c17[type='reset'],
.c17[type='submit'] {
  -webkit-appearance: button;
}

.c17::-moz-focus-inner,
.c17[type='button']::-moz-focus-inner,
.c17[type='reset']::-moz-focus-inner,
.c17[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c17:-moz-focusring,
.c17[type='button']:-moz-focusring,
.c17[type='reset']:-moz-focusring,
.c17[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c21 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c21,
.c21[type='button'],
.c21[type='reset'],
.c21[type='submit'] {
  -webkit-appearance: button;
}

.c21::-moz-focus-inner,
.c21[type='button']::-moz-focus-inner,
.c21[type='reset']::-moz-focus-inner,
.c21[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c21:-moz-focusring,
.c21[type='button']:-moz-focusring,
.c21[type='reset']:-moz-focusring,
.c21[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c9 {
  width: inherit;
}

.c11 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
}

.c15 {
  overflow: hidden;
}

.c22:focus {
  outline: none;
}

.c13 {
  display: none;
}

.c4 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c4 > *:first-child {
  padding-left: 0;
}

.c4 > *:nth-last-child(2) {
  padding-right: 0;
}

.c14 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c14:hover {
  background: #F5F5F5;
}

.c14 > *:first-child {
  padding-left: 0;
}

.c14 > *:nth-last-child(2) {
  padding-right: 0;
}

.c5 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c7 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media not all and (max-width:975px) {
  .c20 {
    display: none;
  }
}

@media not all and (min-width:976px) {
  .c24 {
    display: none;
  }
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Default Table With Actions Column
  </span>
  <div
    className="c2"
    role="table"
  >
    <div
      className="c3 c4 c5"
      role="row"
    >
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c12 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          />
        </div>
      </div>
      <div
        className="c12 c7 c13"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          />
        </div>
      </div>
    </div>
    <div
      className="c3 c14"
      role="row"
    >
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 1-3
          </span>
        </div>
      </div>
      <div
        className="c12 c15"
        role="cell"
      >
        <button
          className="NormalizedButton__Button-ey7f5x-0 c17"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c18"
          >
            <svg
              aria-hidden="true"
              className="c19"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zM3 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm9 0a3 3 0 1 1 0 6 3 3 0 0 1 0-6z"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c12 c15 c13"
        role="cell"
      >
        <div
          className="c20"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c21 c22"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c18"
            >
              <svg
                aria-hidden="true"
                className="c23"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c24"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c21 c22"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c18"
            >
              <svg
                aria-hidden="true"
                className="c25 c26"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c3 c14"
      role="row"
    >
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 2-3
          </span>
        </div>
      </div>
      <div
        className="c12 c15"
        role="cell"
      >
        <button
          className="NormalizedButton__Button-ey7f5x-0 c17"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c18"
          >
            <svg
              aria-hidden="true"
              className="c19"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zM3 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm9 0a3 3 0 1 1 0 6 3 3 0 0 1 0-6z"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c12 c15 c13"
        role="cell"
      >
        <div
          className="c20"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c21 c22"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c18"
            >
              <svg
                aria-hidden="true"
                className="c23"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c24"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c21 c22"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c18"
            >
              <svg
                aria-hidden="true"
                className="c25 c26"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c3 c14"
      role="row"
    >
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 3-3
          </span>
        </div>
      </div>
      <div
        className="c12 c15"
        role="cell"
      >
        <button
          className="NormalizedButton__Button-ey7f5x-0 c17"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c18"
          >
            <svg
              aria-hidden="true"
              className="c19"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zM3 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm9 0a3 3 0 1 1 0 6 3 3 0 0 1 0-6z"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c12 c15 c13"
        role="cell"
      >
        <div
          className="c20"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c21 c22"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c18"
            >
              <svg
                aria-hidden="true"
                className="c23"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c24"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c21 c22"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c18"
            >
              <svg
                aria-hidden="true"
                className="c25 c26"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / Default FlexTable Default Table With Custom Title 1`] = `
.c6 {
  height: 12px;
  box-sizing: border-box;
  display: block;
  width: 16px;
  overflow: hidden;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  margin-left: -2px;
  margin-right: -2px;
}

.c4 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c9 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c9 > *:not(:first-child) {
  padding-top: 0;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c18 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c27 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c29 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c30 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c22 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c26 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c14 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c24 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c24,
.c24[type='button'],
.c24[type='reset'],
.c24[type='submit'] {
  -webkit-appearance: button;
}

.c24::-moz-focus-inner,
.c24[type='button']::-moz-focus-inner,
.c24[type='reset']::-moz-focus-inner,
.c24[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c24:-moz-focusring,
.c24[type='button']:-moz-focusring,
.c24[type='reset']:-moz-focusring,
.c24[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c15 {
  width: inherit;
}

.c17 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
}

.c21 {
  overflow: hidden;
}

.c25:focus {
  outline: none;
}

.c19 {
  display: none;
}

.c10 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c10 > *:first-child {
  padding-left: 0;
}

.c10 > *:nth-last-child(2) {
  padding-right: 0;
}

.c20 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c20:hover {
  background: #F5F5F5;
}

.c20 > *:first-child {
  padding-left: 0;
}

.c20 > *:nth-last-child(2) {
  padding-right: 0;
}

.c11 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c13 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media not all and (max-width:975px) {
  .c23 {
    display: none;
  }
}

@media not all and (min-width:976px) {
  .c28 {
    display: none;
  }
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Default Table Custom With Title
  </span>
  <div
    aria-labelledby="custom-title-title"
    className="c2"
    id="custom-title"
    role="table"
  >
    <div
      className="c3"
      id="custom-title-title"
    >
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <svg
            className="c6"
            focusable="false"
            role="img"
            viewBox="0 0 640 480"
          >
            <g
              transform="translate(50.082) scale(.9375)"
            >
              <g
                fillRule="evenodd"
                strokeWidth="1pt"
              >
                <path
                  d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
                  fill="#006aa7"
                />
                <path
                  d="M-121.103 204.984h256v102.4h-256z"
                  fill="#fecc00"
                />
                <path
                  d="M133.843.01h102.4v511.997h-102.4z"
                  fill="#fecc00"
                />
                <path
                  d="M232.995 205.013h460.798v102.4H232.995z"
                  fill="#fecc00"
                />
                <path
                  d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
                  fill="#006aa7"
                />
              </g>
            </g>
            <title>
              Sweden
            </title>
          </svg>
        </div>
        <div
          className="c5"
        >
          <span
            className="c7"
          >
            Ericsson Corporation
          </span>
        </div>
        <div
          className="c5"
        >
          <span
            className="c8"
          >
            (
            ERICSSON
            )
          </span>
        </div>
      </div>
    </div>
    <div
      className="c9 c10 c11"
      role="row"
    >
      <div
        className="c12 c13"
        role="columnheader"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c16 c17"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c12 c13"
        role="columnheader"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c16 c17"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c12 c13"
        role="columnheader"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c16 c17"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c18 c13 c19"
        role="columnheader"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c16 c17"
          />
        </div>
      </div>
    </div>
    <div
      className="c9 c20"
      role="row"
    >
      <div
        className="c12 c21"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c22 c17"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c12 c21"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c22 c17"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c12 c21"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c22 c17"
          >
            Cell 1-3
          </span>
        </div>
      </div>
      <div
        className="c18 c21 c19"
        role="cell"
      >
        <div
          className="c23"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c24 c25"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c26"
            >
              <svg
                aria-hidden="true"
                className="c27"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c28"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c24 c25"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c26"
            >
              <svg
                aria-hidden="true"
                className="c29 c30"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c9 c20"
      role="row"
    >
      <div
        className="c12 c21"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c22 c17"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c12 c21"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c22 c17"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c12 c21"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c22 c17"
          >
            Cell 2-3
          </span>
        </div>
      </div>
      <div
        className="c18 c21 c19"
        role="cell"
      >
        <div
          className="c23"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c24 c25"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c26"
            >
              <svg
                aria-hidden="true"
                className="c27"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c28"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c24 c25"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c26"
            >
              <svg
                aria-hidden="true"
                className="c29 c30"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c9 c20"
      role="row"
    >
      <div
        className="c12 c21"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c22 c17"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c12 c21"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c22 c17"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c12 c21"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c22 c17"
          >
            Cell 3-3
          </span>
        </div>
      </div>
      <div
        className="c18 c21 c19"
        role="cell"
      >
        <div
          className="c23"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c24 c25"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c26"
            >
              <svg
                aria-hidden="true"
                className="c27"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c28"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c24 c25"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c26"
            >
              <svg
                aria-hidden="true"
                className="c29 c30"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / Default FlexTable Default Table With Footer 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c3 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c21 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c23 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c24 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c20 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c27 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c8 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c18 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c18,
.c18[type='button'],
.c18[type='reset'],
.c18[type='submit'] {
  -webkit-appearance: button;
}

.c18::-moz-focus-inner,
.c18[type='button']::-moz-focus-inner,
.c18[type='reset']::-moz-focus-inner,
.c18[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c18:-moz-focusring,
.c18[type='button']:-moz-focusring,
.c18[type='reset']:-moz-focusring,
.c18[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c9 {
  width: inherit;
}

.c11 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
}

.c15 {
  overflow: hidden;
}

.c19:focus {
  outline: none;
}

.c13 {
  display: none;
}

.c4 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c4 > *:first-child {
  padding-left: 0;
}

.c4 > *:nth-last-child(2) {
  padding-right: 0;
}

.c14 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c14:hover {
  background: #F5F5F5;
}

.c14 > *:first-child {
  padding-left: 0;
}

.c14 > *:nth-last-child(2) {
  padding-right: 0;
}

.c5 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c25 {
  border-top: 1px solid #282823;
  border-bottom: 0;
}

.c7 {
  overflow: hidden;
}

.c26 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media not all and (max-width:975px) {
  .c17 {
    display: none;
  }
}

@media not all and (min-width:976px) {
  .c22 {
    display: none;
  }
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Default Table With Footer
  </span>
  <div
    className="c2"
    role="table"
  >
    <div
      className="c3 c4 c5"
      role="row"
    >
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c12 c7 c13"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          />
        </div>
      </div>
    </div>
    <div
      className="c3 c14"
      role="row"
    >
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 1-3
          </span>
        </div>
      </div>
      <div
        className="c12 c15 c13"
        role="cell"
      >
        <div
          className="c17"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c18 c19"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c20"
            >
              <svg
                aria-hidden="true"
                className="c21"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c22"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c18 c19"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c20"
            >
              <svg
                aria-hidden="true"
                className="c23 c24"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c3 c14"
      role="row"
    >
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 2-3
          </span>
        </div>
      </div>
      <div
        className="c12 c15 c13"
        role="cell"
      >
        <div
          className="c17"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c18 c19"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c20"
            >
              <svg
                aria-hidden="true"
                className="c21"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c22"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c18 c19"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c20"
            >
              <svg
                aria-hidden="true"
                className="c23 c24"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c3 c14"
      role="row"
    >
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16 c11"
          >
            Cell 3-3
          </span>
        </div>
      </div>
      <div
        className="c12 c15 c13"
        role="cell"
      >
        <div
          className="c17"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c18 c19"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c20"
            >
              <svg
                aria-hidden="true"
                className="c21"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c22"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c18 c19"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c20"
            >
              <svg
                aria-hidden="true"
                className="c23 c24"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c3 c4 c25"
      role="row"
    >
      <div
        className="c6 c26"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c27 c11"
          >
            Footer 1
          </span>
        </div>
      </div>
      <div
        className="c6 c26"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c27 c11"
          >
            Footer 2
          </span>
        </div>
      </div>
      <div
        className="c6 c26"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c27 c11"
          >
            Footer 3
          </span>
        </div>
      </div>
      <div
        className="c12 c26 c13"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c27 c11"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / Default FlexTable Default Table With Title 1`] = `
.c2 {
  margin-bottom: 40px;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c6 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c15 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c24 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c26 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c27 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c19 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c23 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c21 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c21,
.c21[type='button'],
.c21[type='reset'],
.c21[type='submit'] {
  -webkit-appearance: button;
}

.c21::-moz-focus-inner,
.c21[type='button']::-moz-focus-inner,
.c21[type='reset']::-moz-focus-inner,
.c21[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c21:-moz-focusring,
.c21[type='button']:-moz-focusring,
.c21[type='reset']:-moz-focusring,
.c21[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c12 {
  width: inherit;
}

.c14 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
}

.c18 {
  overflow: hidden;
}

.c22:focus {
  outline: none;
}

.c16 {
  display: none;
}

.c7 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c7 > *:first-child {
  padding-left: 0;
}

.c7 > *:nth-last-child(2) {
  padding-right: 0;
}

.c17 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c17:hover {
  background: #F5F5F5;
}

.c17 > *:first-child {
  padding-left: 0;
}

.c17 > *:nth-last-child(2) {
  padding-right: 0;
}

.c8 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c10 {
  overflow: hidden;
}

.c3 {
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  padding-left: 4px;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media not all and (max-width:975px) {
  .c20 {
    display: none;
  }
}

@media not all and (min-width:976px) {
  .c25 {
    display: none;
  }
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Default Table With Title
  </span>
  <div
    className="c2"
  >
    <div
      aria-labelledby="table-with-title-title"
      className="c3"
      id="table-with-title"
      role="table"
    >
      <div
        className="c4"
        id="table-with-title-title"
      >
        <span
          className="c1 c5"
        >
          Table with title
        </span>
      </div>
      <div
        className="c6 c7 c8"
        role="row"
      >
        <div
          className="c9 c10"
          role="columnheader"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c13 c14"
            >
              Header 1
            </span>
          </div>
        </div>
        <div
          className="c9 c10"
          role="columnheader"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c13 c14"
            >
              Header 2
            </span>
          </div>
        </div>
        <div
          className="c9 c10"
          role="columnheader"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c13 c14"
            >
              Header 3
            </span>
          </div>
        </div>
        <div
          className="c15 c10 c16"
          role="columnheader"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c13 c14"
            />
          </div>
        </div>
      </div>
      <div
        className="c6 c17"
        role="row"
      >
        <div
          className="c9 c18"
          role="cell"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c19 c14"
            >
              Cell 1-1
            </span>
          </div>
        </div>
        <div
          className="c9 c18"
          role="cell"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c19 c14"
            >
              Cell 1-2
            </span>
          </div>
        </div>
        <div
          className="c9 c18"
          role="cell"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c19 c14"
            >
              Cell 1-3
            </span>
          </div>
        </div>
        <div
          className="c15 c18 c16"
          role="cell"
        >
          <div
            className="c20"
          >
            <button
              aria-expanded={false}
              className="NormalizedButton__Button-ey7f5x-0 c21 c22"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              <span
                className="c23"
              >
                <svg
                  aria-hidden="true"
                  className="c24"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <polygon
                    points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            className="c25"
          >
            <button
              aria-expanded={false}
              className="NormalizedButton__Button-ey7f5x-0 c21 c22"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              <span
                className="c23"
              >
                <svg
                  aria-hidden="true"
                  className="c26 c27"
                  direction="down"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 16 16"
                >
                  <polygon
                    points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="c6 c17"
        role="row"
      >
        <div
          className="c9 c18"
          role="cell"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c19 c14"
            >
              Cell 2-1
            </span>
          </div>
        </div>
        <div
          className="c9 c18"
          role="cell"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c19 c14"
            >
              Cell 2-2
            </span>
          </div>
        </div>
        <div
          className="c9 c18"
          role="cell"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c19 c14"
            >
              Cell 2-3
            </span>
          </div>
        </div>
        <div
          className="c15 c18 c16"
          role="cell"
        >
          <div
            className="c20"
          >
            <button
              aria-expanded={false}
              className="NormalizedButton__Button-ey7f5x-0 c21 c22"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              <span
                className="c23"
              >
                <svg
                  aria-hidden="true"
                  className="c24"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <polygon
                    points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            className="c25"
          >
            <button
              aria-expanded={false}
              className="NormalizedButton__Button-ey7f5x-0 c21 c22"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              <span
                className="c23"
              >
                <svg
                  aria-hidden="true"
                  className="c26 c27"
                  direction="down"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 16 16"
                >
                  <polygon
                    points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="c6 c17"
        role="row"
      >
        <div
          className="c9 c18"
          role="cell"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c19 c14"
            >
              Cell 3-1
            </span>
          </div>
        </div>
        <div
          className="c9 c18"
          role="cell"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c19 c14"
            >
              Cell 3-2
            </span>
          </div>
        </div>
        <div
          className="c9 c18"
          role="cell"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c19 c14"
            >
              Cell 3-3
            </span>
          </div>
        </div>
        <div
          className="c15 c18 c16"
          role="cell"
        >
          <div
            className="c20"
          >
            <button
              aria-expanded={false}
              className="NormalizedButton__Button-ey7f5x-0 c21 c22"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              <span
                className="c23"
              >
                <svg
                  aria-hidden="true"
                  className="c24"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <polygon
                    points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            className="c25"
          >
            <button
              aria-expanded={false}
              className="NormalizedButton__Button-ey7f5x-0 c21 c22"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              <span
                className="c23"
              >
                <svg
                  aria-hidden="true"
                  className="c26 c27"
                  direction="down"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 16 16"
                >
                  <polygon
                    points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="some-other-table-title"
    className="c3"
    id="some-other-table"
    role="table"
  >
    <div
      className="c4"
      id="some-other-table-title"
    >
      <span
        className="c1 c5"
      >
        Some other table
      </span>
    </div>
    <div
      className="c6 c7 c8"
      role="row"
    >
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13 c14"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13 c14"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13 c14"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c15 c10 c16"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13 c14"
          />
        </div>
      </div>
    </div>
    <div
      className="c6 c17"
      role="row"
    >
      <div
        className="c9 c18"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c19 c14"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c9 c18"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c19 c14"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c9 c18"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c19 c14"
          >
            Cell 1-3
          </span>
        </div>
      </div>
      <div
        className="c15 c18 c16"
        role="cell"
      >
        <div
          className="c20"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c21 c22"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c23"
            >
              <svg
                aria-hidden="true"
                className="c24"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c25"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c21 c22"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c23"
            >
              <svg
                aria-hidden="true"
                className="c26 c27"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c6 c17"
      role="row"
    >
      <div
        className="c9 c18"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c19 c14"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c9 c18"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c19 c14"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c9 c18"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c19 c14"
          >
            Cell 2-3
          </span>
        </div>
      </div>
      <div
        className="c15 c18 c16"
        role="cell"
      >
        <div
          className="c20"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c21 c22"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c23"
            >
              <svg
                aria-hidden="true"
                className="c24"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c25"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c21 c22"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c23"
            >
              <svg
                aria-hidden="true"
                className="c26 c27"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c6 c17"
      role="row"
    >
      <div
        className="c9 c18"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c19 c14"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c9 c18"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c19 c14"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c9 c18"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c19 c14"
          >
            Cell 3-3
          </span>
        </div>
      </div>
      <div
        className="c15 c18 c16"
        role="cell"
      >
        <div
          className="c20"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c21 c22"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c23"
            >
              <svg
                aria-hidden="true"
                className="c24"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c25"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c21 c22"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c23"
            >
              <svg
                aria-hidden="true"
                className="c26 c27"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
